# conventional-semver-rs

./: .conventional_release.toml  Cargo.toml  LICENSE  README.md  conventional_release.toml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  release.rs
src/config/: mod.rs  presets.rs
