[package]
name = "conventional-semver-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/soulxburn/conventional-semver-rs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "semver", "versioning"]
description = """
CLI and library to manage your git projects
semantic version based on conventional commits
"""

[dependencies]
semver = "1.0.10"
lenient_semver = "0.4.2"
git2 = "0.14"
clap = { version = "3.2.6", features = ["derive"] }
custom_error = "1.9.2"
regex = "1"
git-conventional = "0.12.0"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.5.9"
anyhow = "1.0.65"
